# learning_LLM

./: aa-interview-guide.html  adapter-bottleneck-explained.tsx  airline-ai-interview-prep.html  azure-ai-foundry-cheatsheet.py  comparison-table.tsx  interview-prep-app.tsx
code snippets/: README.md  aa-interview-guide.html  azure_ai_foundry_cheatsheet.py  complaint_classifier.py  feature_importance.ipynb  feature_importance.py  feature_importance_cheatsheet.py  genai-cheatsheet.py  genai_code_cheatsheet.py  pyproject.toml  question.py  question1.py  ragpipeline.py  requirements.txt
code snippets/.windsurf/rules/: context.md
code snippets/docs/: doc1.txt  doc2.txt  doc3.txt
components/: adapter-explained.tsx  compass_artifact_wf-b941eb3f-6e21-4223-9fcb-00cd1bea6a5b_text_markdown.md  gemini.html  gemini_full.html
file-viewer-app/: README.md  next.config.ts  package-lock.json  package.json
file-viewer-app/src/app/: page.tsx
file-viewer-app/src/app/api/copy-components/: route.ts
file-viewer-app/src/app/components/[name]/: page.tsx
file-viewer-app/src/components/: ComponentDisplay.tsx  ComponentRenderer.tsx
file-viewer-app/src/utils/: componentLoader.ts  copyComponents.ts
